<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".customerMode.contactScreen.ContactActivity">


    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/floatingOptionsButton"
            layout="@layout/options_floating_button" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/topText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="100sp"
                    android:layout_marginTop="30sp"
                    android:text="@string/contact_label"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:id="@+id/user_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <ImageView
                        android:id="@+id/user_image"
                        android:contentDescription="@string/image"
                        android:layout_width="24sp"
                        android:layout_height="24sp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/user_icon" />


                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_name"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/telephone_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <ImageView
                        android:id="@+id/telephone_image"
                        android:layout_width="24sp"
                        android:contentDescription="@string/image"
                        android:layout_height="24sp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/phone" />


                    <EditText
                        android:id="@+id/telephoneEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_telephone"
                        android:inputType="phone"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/country_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <ImageView
                        android:id="@+id/country_image"
                        android:contentDescription="@string/image"
                        android:layout_width="24sp"
                        android:layout_height="24sp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/country" />


                    <EditText
                        android:id="@+id/countryEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_country"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/zipcode_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <ImageView
                        android:id="@+id/zipcode_image"
                        android:contentDescription="@string/image"
                        android:layout_width="24sp"
                        android:layout_height="24sp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/zip_code" />


                    <EditText
                        android:id="@+id/zipcodeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_zipcode"
                        android:inputType="number"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/address_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <ImageView
                        android:id="@+id/address_image"
                        android:contentDescription="@string/image"
                        android:layout_width="24sp"
                        android:layout_height="24sp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/address" />


                    <EditText
                        android:id="@+id/addressEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_address"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/email_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <ImageView
                        android:id="@+id/email_image"
                        android:layout_width="24sp"
                        android:contentDescription="@string/image"
                        android:layout_height="24sp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10sp"
                        android:background="@drawable/mail" />


                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="50sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/subject_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <EditText
                        android:id="@+id/subjectEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_subject"
                        android:inputType="textEmailSubject"
                        android:selectAllOnFocus="false"
                        android:singleLine="true"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/bodyemail_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_marginTop="5sp"
                    android:background="@drawable/user_password_rectangle"
                    android:paddingLeft="10sp"
                    android:paddingRight="10sp">

                    <EditText
                        android:id="@+id/bodyemailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="20sp"
                        android:layout_marginEnd="20sp"
                        android:background="@android:color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/hint_bodyemail"
                        android:selectAllOnFocus="false"
                        android:singleLine="false"
                        android:textSize="20sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/button_relative_layout"
                    android:layout_width="match_parent"
                    android:layout_height="100sp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5sp"
                    android:gravity="center_horizontal">

                    <ImageButton
                        android:id="@+id/send_button"
                        android:contentDescription="@string/image"
                        android:layout_width="262sp"
                        android:layout_height="75sp"
                        android:background="@drawable/send_button"
                        android:onClick="onSendButtonPressed" />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

    <include
        android:id="@+id/navigation_view"
        layout="@layout/options_navigation_view" />

</android.support.v4.widget.DrawerLayout>